--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		
-		<sonar.projectKey>revaturelabs_rideshare-user-service</sonar.projectKey>
-  		<sonar.organization>revaturelabs-screenforce</sonar.organization>
+		<sonar.projectKey>Batch-747-Carolyn-Rehm_rideshare-user-service</sonar.projectKey>
+  		<sonar.organization>batch-747-carolyn-rehm</sonar.organization>
   		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
   		<sonar.coverage.exclusion>com/revature/beans/*.java</sonar.coverage.exclusion>
 	</properties>
